--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@twa-dev/sdk": "^6.7.1",
+    "@ant-design/icons": "^5.5.1",
+    "@twa-dev/sdk": "^7.10.1",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "antd": "^5.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
